examples/test/testpolicy11649.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11649
  namespace: namespace143
spec:
  podSelector:
    matchLabels:
      key36: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value44
          key44: value35
      podSelector:
        matchLabels:
          key48: value47
          key47: value22
          key26: value49
